# VectorVisor

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.builddemo  Dockerfile.centos  Dockerfile.debian  Dockerfile.run_demo  Makefile  invoke.py  readme.md  rust-toolchain
benchmarks/: README.md  a10g_compile_opt.sh  a10g_save_cached_bin.sh  amd_compile_opt.sh  amd_save_cached_bin.sh  eval_profiler.py  indirect-opt.txt  indirect.txt  local_cached_bin.sh  log.txt  make_figures.py  make_image.py  make_image_amd.py  nvbin.backup  nvcache.backup  run_all.sh  run_all_nvidia.sh  run_benchmarks_aws.py  run_cached_bin.sh  run_cuda.py  save_cached_bin.sh  slowcalls-opt.txt  slowcalls.txt  start_lz4_server.sh  start_lz4_server_wasmtime.sh  t4_compile_opt.sh  t4_save_cached_bin.sh
benchmarks/02_11_2021_18_53_25_bench_results/: cpu_bench_average.txt  cpu_bench_imageblur.txt  cpu_bench_imageblur_bmp.txt  cpu_bench_imagehash.txt  cpu_bench_imagehash_modified.txt  cpu_bench_lz4.txt  cpu_bench_nlp.txt  cpu_bench_pbkdf2.txt  cpu_x86_bench_average.txt  cpu_x86_bench_imageblur.txt  cpu_x86_bench_imageblur_bmp.txt  cpu_x86_bench_imagehash.txt  cpu_x86_bench_imagehash_modified.txt  cpu_x86_bench_lz4.txt  cpu_x86_bench_nlp.txt  cpu_x86_bench_pbkdf2.txt  gpu_bench_average.txt  gpu_bench_imageblur.txt  gpu_bench_imageblur_bmp.txt  gpu_bench_imagehash.txt  gpu_bench_imagehash_modified.txt  gpu_bench_lz4.txt  gpu_bench_nlp.txt  gpu_bench_pbkdf2.txt
benchmarks/03_11_2021_14_43_07_bench_results/: cpu_bench_average.txt  cpu_bench_imageblur_bmp.txt  cpu_bench_lz4.txt  cpu_bench_nlp.txt  cpu_x86_bench_average.txt  cpu_x86_bench_imageblur.txt  cpu_x86_bench_imageblur_bmp.txt  cpu_x86_bench_imagehash_modified.txt  cpu_x86_bench_lz4.txt  gpu_bench_average.txt  gpu_bench_imagehash_modified.txt  gpu_bench_nlp.txt
benchmarks/04_07_2022_02_31_09_bench_results_t4_intel_4/: gpu_membench64_1.txt  gpu_membench64_4.txt  gpu_membench64_8.txt  gpu_membench64_unroll_1.txt  gpu_membench64_unroll_4.txt  gpu_membench64_unroll_8.txt  gpu_membench_1.txt  gpu_membench_4.txt  gpu_membench_8.txt  gpu_membench_unroll_1.txt  gpu_membench_unroll_4.txt  gpu_membench_unroll_8.txt
benchmarks/04_07_2022_02_46_36_bench_results_a10g_amd_4/: gpu_membench64_1.txt  gpu_membench64_4.txt  gpu_membench64_8.txt  gpu_membench64_unroll_1.txt  gpu_membench64_unroll_4.txt  gpu_membench64_unroll_8.txt  gpu_membench_1.txt  gpu_membench_4.txt  gpu_membench_8.txt  gpu_membench_unroll_1.txt  gpu_membench_unroll_4.txt  gpu_membench_unroll_8.txt
benchmarks/12_11_2021_12_47_44_bench_results/: cpu_bench_average.txt  cpu_bench_imageblur.txt  cpu_bench_imageblur_bmp.txt  cpu_bench_imagehash.txt  cpu_bench_imagehash_modified.txt  cpu_bench_lz4.txt  cpu_bench_nlp.txt  cpu_bench_pbkdf2.txt  cpu_x86_bench_average.txt  cpu_x86_bench_imageblur.txt  cpu_x86_bench_imageblur_bmp.txt  cpu_x86_bench_imagehash.txt  cpu_x86_bench_imagehash_modified.txt  cpu_x86_bench_lz4.txt  cpu_x86_bench_nlp.txt  cpu_x86_bench_pbkdf2.txt  gpu_bench_average.txt  gpu_bench_imageblur.txt  gpu_bench_imageblur_bmp.txt  gpu_bench_imagehash.txt  gpu_bench_imagehash_modified.txt  gpu_bench_lz4.txt  gpu_bench_nlp.txt  gpu_bench_pbkdf2.txt
benchmarks/25_10_2021_bench_results/: cpu_bench_average.txt  cpu_bench_imageblur.txt  cpu_bench_imageblur_bmp.txt  cpu_bench_imagehash.txt  cpu_bench_imagehash_modified.txt  cpu_bench_lz4.txt  cpu_bench_nlp.txt  cpu_bench_pbkdf2.txt  cpu_x86_bench_average.txt  cpu_x86_bench_imageblur.txt  cpu_x86_bench_imageblur_bmp.txt  (+13 more)
benchmarks/average/: Cargo.toml  go.mod  go.sum  run_average_bench.go
benchmarks/average/src/: main.rs
benchmarks/cuda-blockhash/: Cargo.toml
benchmarks/cuda-blockhash/kernel/: Makefile  blockhash.cu  blockhash.ptx  blur.cu  blur.ptx
benchmarks/cuda-blockhash/src/: main.rs
benchmarks/cuda-blur/: Cargo.toml  add.ptx
benchmarks/cuda-blur/kernel/: Makefile  blur.cu  blur.ptx
benchmarks/cuda-blur/src/: main.rs
benchmarks/genpdf/: Cargo.toml  run_genpdf.go
benchmarks/genpdf/src/: main.rs
benchmarks/imagehash/: Cargo.toml  run_image_hash.go
benchmarks/imagehash-modified/: Cargo.toml  run_image_hash.go
benchmarks/imagehash-modified/src/: main.rs
benchmarks/imagehash-modified/testimages/: generate.py
benchmarks/imagehash/src/: main.rs
benchmarks/imagehash/testimages/: generate.py
benchmarks/json-compression/: Cargo.toml  run_json_compression_benchmark.py  run_json_lz4.go  run_lz4.go  smaller_tweets.txt
benchmarks/json-compression-lz4/: Cargo.toml  go.mod  go.sum  run_json_compression_benchmark.py  run_json_lz4_bench.go  run_lz4.go
benchmarks/json-compression-lz4/src/: main.rs
benchmarks/json-compression/.cargo/: config
benchmarks/json-compression/src/: main.rs
benchmarks/jstest/: Cargo.toml  compile.sh
benchmarks/jstest/.cargo/: config
benchmarks/jstest/src/: main.rs
benchmarks/nlp-count-vectorizer/: Cargo.toml  run_nlp.go  tweets_readme.md
benchmarks/nlp-count-vectorizer/src/: main.rs
benchmarks/pbkdf2/: Cargo.toml  pbkdf2-opt-prebuilt.wasm  pbkdf2.wasm  pbkdf2.wat  run_pbkdf2.go  run_pbkdf2_benchmark.py
benchmarks/pbkdf2/.cargo/: config
benchmarks/pbkdf2/src/: main.rs
benchmarks/rsa-decrypt/: Cargo.toml  generate_msgs.sh  genkey.sh  run_rsa.go
benchmarks/rsa-decrypt/src/: main.rs
benchmarks/rsa-keygen/: Cargo.toml  run_rsa.go
benchmarks/rsa-keygen/src/: main.rs
benchmarks/rust-pdfwriter/: Cargo.toml  go.mod  go.sum  run_genpdf.go
benchmarks/rust-pdfwriter/.cargo/: config
benchmarks/rust-pdfwriter/src/: main.rs
benchmarks/scrypt/: Cargo.toml  go.mod  run_scrypt.go
benchmarks/scrypt/.cargo/: config
benchmarks/scrypt/src/: main.rs
cpu_debug_test_harness/: Makefile
examples/: precompiled-wasm  rust_hello.wat  simple.wat  wavm_hello.wat
includes/: wasm_hypercall.h
opencl_test_harness/: Makefile  opencl_launcher.c
src/: batch_submit.rs  main.rs  opencl_runner.rs  opencl_writer.rs  wasmtime_runner.rs
wasm-serverless-invoke/: Cargo.toml
wasm-serverless-invoke/src/: lib.rs  wasm_handler.rs
wasm-serverless-invoke/src/wasm_handler/: server.rs
(+1602 files in other folders)
