[package]
name = "wasm2opencl"
version = "0.1.0"
authors = ["SamGinzburg <ginzburg.sam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wast = "27.0.0"
regex = "1"
lazy_static = "1.4.0"
ocl = "0.19"
wasi-common = "0.24.0"
wasmtime-wasi = "0.24.0"
wasi-cap-std-sync = "0.24.0"
wasmtime = "0.24.0"
crossbeam = "0.8.0"
rayon = "1.5"
wiggle = "0.24.0"
byteorder = "1.3.4"
bytes = "1"
wasmtime-wiggle = "0.24.0"
clap = "2.33.3"
bincode = "1.3.1"
serde_cbor = "0.11.1"
serde = "1.0.117"
serde_json = "1.0.64"
chrono = "0.4"
num_cpus = "1.13.0"
cap-std = "0.13.7"
wasmprinter = "0.2.24"
indicatif = "0.15.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
deadqueue = "0.2.0"
