[package]
name = "vectorvisor"
version = "0.1.0"
authors = ["SamGinzburg <ginzburg.sam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.7"
wast = "46.0.0"
regex = "1"
lazy_static = "1.4.0"
ocl = "0.19"
wasi-common = "1.0.0"
wasmtime-wasi = "1.0.0"
wasi-cap-std-sync = "1.0.0"
wasmtime = "1.0.0"
crossbeam = "0.8.0"
rayon = "1.5"
wiggle = "1.0.0"
byteorder = "1.3.4"
bytes = "1"
clap = "2.33.3"
bincode = "1.3.1"
serde_cbor = "0.11.1"
rmp-serde = "0.15.5"
serde = "1.0.117"
serde_json = "1.0.64"
chrono = "0.4"
num_cpus = "1.13.0"
cap-std = "0.26.0"
wasmprinter = "0.2.24"
indicatif = "0.15.0"
tokio = { version = "1.12.0", features = ["full"] }
warp = "0.3"
hyper = "0.14.13"
deadqueue = "0.2.0"
futures = { version = "0.3.25", features=["thread-pool"] }
bus = "2.2.3"
rustc-demangle = "0.1"
uuid = { version = "0.8", features = ["v4"] }
