[package]
name = "wasm-serverless-invoke"
version = "0.1.0"
authors = ["SamGinzburg <ginzburg.sam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.62"
rmp-serde = "0.15.5"
serde = { version = "1.0.62", features = ["derive"] }
[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
num_cpus = "1.13.0"
bytes = "1"
chrono = "0.4"
