[package]
name = "average"
version = "0.1.0"
authors = ["SamGinzburg <ginzburg.sam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-serverless-invoke = { path = "../../wasm-serverless-invoke" }
serde_json = "1.0.62"
hdrhistogram = "7.3.0"
serde = { version = "1.0.62", features = ["derive"] }

#[profile.release]
#lto = true
#codegen-units = 1 # better optimizations
#opt-level = 3
