[package]
name = "genpdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lopdf = { version = "0.27.0" }
wasm-serverless-invoke = { path = "../../wasm-serverless-invoke" }
serde = { version = "1.0.62", features = ["derive"] }
lazy_static = "1.4.0"
