[package]
name = "imagehash-modified"
version = "0.1.0"
authors = ["SamGinzburg <ginzburg.sam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-serverless-invoke = { path = "../../wasm-serverless-invoke" }
serde_json = "1.0.62"
serde = { version = "1.0.62", features = ["derive"] }
image = { version = "*", default-features = false, features = ["bmp"] } 
base64 = "0.13.0"
img_hash = { git = "https://github.com/SamGinzburg/img_hash.git", rev="7eeae2b" }
#img_hash = { path = "/home/ginzburgsam/research/img_hash/" }

[profile.release]
lto = true
codegen-units = 1 # better optimizations
opt-level = 3

#rustflags = [
#  "-C", "inline-threshold=50",
#]
