[package]
name = "json-compression-lz4"
version = "0.1.0"
authors = ["SamGinzburg <ginzburg.sam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-serverless-invoke = { path = "../../wasm-serverless-invoke" }
serde = { version = "1.0.62", features = ["derive"] }
lz4_flex = { version = "0.9.3", default-features = false }
