[package]
name = "json-compression"
version = "0.1.0"
authors = ["SamGinzburg <ginzburg.sam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-serverless-invoke = { path = "../../wasm-serverless-invoke" }
serde_json = "1.0.62"
serde = { version = "1.0.62", features = ["derive"] }
base64 = "0.13.0"
compress = { version = "0.2.1", features = ["lz4"] }

[profile.release]
lto = true
opt-level = 'z'
