[package]
name = "rsa-keygen"
version = "0.1.0"
authors = ["SamGinzburg <ginzburg.sam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-serverless-invoke = { path = "../../wasm-serverless-invoke" }
serde_json = "1.0.62"
serde = { version = "1.0.62", features = ["derive"] }
lazy_static = "1.4.0"
base64 = "0.13.0"
rsa = { version = "0.4.0", features = ["pem"] }
rand_core = { version = "0.6", features = ["std"] }

[profile.release]
lto = true
opt-level = 'z'
