[package]
name = "rust-pdfwriter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#pdf-writer = "0.6"
#pdf-writer = { path = "/home/ginzburgsam/pdf-writer" }
pdf-writer = { git = "https://github.com/SamGinzburg/pdf-writer.git", branch = "main" }
wasm-serverless-invoke = { path = "../../wasm-serverless-invoke" }
serde = { version = "1.0.62", features = ["derive"] }
lazy_static = "1.4.0"
image = { version = "0.24", default-features = false, features = ["jpeg"] }
